tests/test_input_files/good/test_good_if_stmt_12.punkt
main {
	if false
		print "false".
	print "true".
}
