tests/test_input_files/bad/test_bad_if_stmt_2.punkt
main {
	if true
		# missing statement/code-block
	else
		print "hello".
}
